# cw20-borrow

./: Cargo.toml  README
contracts/cw-borrow/cw-borrow/: Cargo.toml
contracts/cw-borrow/src/: contract.rs  error.rs  msg.rs  state.rs
